--- a/valuesauce/nbproject/project.properties
+++ b/valuesauce/nbproject/project.properties
@@ -32,7 +32,7 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.Solidtea.jar}
+    ${reference.sleetlocust.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,8 +62,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.Solidtea=../../solidtea/Solidtea
-reference.Solidtea.jar=${project.Solidtea}/dist/Solidtea.jar
+project.sleetlocust=../../sleetlocust/sleetlocust
+reference.sleetlocust.jar=${project.sleetlocust}/dist/sleetlocust.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
