--- a/valuesauce/nbproject/project.properties
+++ b/valuesauce/nbproject/project.properties
@@ -35,7 +35,7 @@ javac.classpath=\
     ${reference.sleetlocust.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
@@ -67,10 +67,6 @@ reference.sleetlocust.jar=${project.sleetlocust}/dist/sleetlocust.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
